--- a/pages/myOrder/myOrder.wxml
+++ b/pages/myOrder/myOrder.wxml
@@ -58,25 +58,25 @@
   <block wx:for='{{orders}}' wx:key='{{index}}' wx:if='{{activeOrderType !== "line" || activeOrderType !== "food"}}'>
     <view class='order' data-id='{{item.id}}' data-order='{{item}}' bindtap='goToTheDetail'>
       <view class='top'>
-        <view wx:if='{{item.preOrder}}'>{{ (item.orderStatus === -1 || !item.preOrder.time) ? dateFr.getOrderDate(item.createAt) : item.name}}</view>
+        <view wx:if='{{item.preOrder || item.providerOrderInfo}}'>{{ item.providerOrderInfo ? item.providerOrderInfo.mName : ((item.orderStatus === -1 || !item.preOrder.time) ? dateFr.getOrderDate(item.createAt) : item.name)}}</view>
         <view wx:else>{{dateFr.getOrderDate(item.createAt)}}</view>
-        <view class='status {{(item.orderStatus === -1 || item.orderStatus === 6) ? "orange" : ""}} {{(item.orderStatus === 2 || item.orderStatus === 3) ? "blue" : ""}}'>{{dateFr.getOrderStatus(item.orderStatus, item.preOrder)}}</view>
+        <view class='status {{(item.orderStatus === -1 || item.orderStatus === 6) ? "orange" : ""}} {{(item.orderStatus === 2 || item.orderStatus === 3) ? "blue" : ""}}'>{{dateFr.getOrderStatus(item.orderStatus, item)}}</view>
       </view>
       <view class='line'></view>
       <view class='center'>
-        <block wx:if='{{!item.preOrder || !item.preOrder.time || item.orderStatus === -1}}'>
+        <block wx:if='{{((!item.preOrder || !item.preOrder.time) && !item.providerOrderInfo) || item.orderStatus === -1}}'>
           <view class='name'>{{ item.preOrder ? (item.preOrder.time ? item.preOrder.mName : item.name) : item.name}}</view>
           <view class='subTitle' wx:if='{{(!item.preOrder || !item.preOrder.time) && item.merchCount > 1}}'>该订单包含 {{item.merchCount}} 个商品</view>
         </block>
         <block wx:else>
           <view class='eat'>
             <view class='tags'>就餐</view>
-            <view class='time'>{{item.preOrder.time}}</view>
-            <view class='date'>/{{dateFr.getChineseDate(item.preOrder.date)}}</view>
+            <view class='time'>{{ item.preOrder ? item.preOrder.time : dateFr.getOrderTime(item.providerOrderInfo.userUpTime)}}</view>
+            <view class='date'>/{{item.preOrder ? dateFr.getChineseDate(item.preOrder.date) : dateFr.getOrderDate(item.providerOrderInfo.userUpTime)}}</view>
           </view>
         </block>
       </view>
-      <view class='bottom' wx:if='{{!item.preOrder || !item.preOrder.time || item.orderStatus === -1}}'>
+      <view class='bottom' wx:if='{{((!item.preOrder || !item.preOrder.time) && !item.providerOrderInfo) || item.orderStatus === -1}}'>
         <view class='left'>
           <text wx:if='{{item.orderStatus === 7 || item.orderStatus === 6 || item.orderStatus === 1}}'>{{dateFr.getOrderStatusSubText(item.orderStatus)}}</text>
           <button data-order='{{item}}' catchtap='goToTheShoppingOrPay' wx:else>{{dateFr.getOrderStatusSubText(item.orderStatus)}}</button>
