--- a/pages/poi_detail/poi_detail.wxml
+++ b/pages/poi_detail/poi_detail.wxml
@@ -53,7 +53,7 @@
       <view class='language' wx:if='{{goods.goodsInfo.supportedLanguage.length}}'>
         <view class='label'>服务语言：{{dateFr.getSupportedLanguage(goods.goodsInfo.supportedLanguage)}}</view>
       </view>
-      <view class='map' wx:if='{{goods.goodsBase.local[0] !== 0 && goods.goodsBase.local[1] !== 0}}'>
+      <view class='map' wx:if='{{goods.goodsBase.local[0] && goods.goodsBase.local[1]}}'>
         <map id='myMap' style='width: 100%; height: 249rpx;' latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}" scale='10' show-location bindcallouttap='showMapNavigation'></map>
       </view>
     </view>
