--- a/pages/book/book.wxss
+++ b/pages/book/book.wxss
@@ -88,10 +88,23 @@ image {
   height: 100%;
 }
 
-.book_form .single .single_left picker view{
+.book_form .single .single_left picker .picker{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
   width: 100%;
   height: 50rpx;
   text-align: right;
+}
+
+.book_form .single .single_left picker .picker .picker_text{
+  flex: 1;
+}
+
+.book_form .single .single_left picker .picker .img_row{
+  width: 32rpx;
+  height: 32rpx;
+  margin-left: 15rpx;
 }
 
 .book_form .service_charge{
