--- a/pages/foodMeal/foodMeal.wxml
+++ b/pages/foodMeal/foodMeal.wxml
@@ -8,8 +8,8 @@
       <view class='info'>
         <view class='name'>{{item.goodsItemInfo.name}}</view>
         <view class='price'>
-          <view class='present'>{{item.goodsItemBase.currency + (item.goodsItemBase.amount / 100)}}</view>
-          <view class='original'>{{item.goodsItemBase.currency + (item.goodsItemBase.sourceAmount / 100)}}</view>
+          <view class='present'>{{item.goodsItemBase.currency}}{{item.goodsItemBase.amount ? item.goodsItemBase.amount / 100 : item.goodsItemBase.sourceAmount / 100 }}</view>
+          <view class='original' wx:if='{{item.goodsItemBase.amount && item.goodsItemBase.amount !== item.goodsItemBase.sourceAmount}}'>{{item.goodsItemBase.currency + (item.goodsItemBase.sourceAmount / 100)}}</view>
         </view>
       </view>
       <view class='buy'>
